# musician-recommender

./: .coverage  .gitignore  Data_Collection&Overview.ipynb  LICENSE  README.md  notebook.ipynb  pyproject.toml  streamlit_app.py
notebooks/: 01 Artist Name Matching.ipynb  01 Data_Collection&Overview.ipynb  01 EDA.ipynb  01Data_Collection&Overview.ipynb  02 Artist Name Matching.ipynb  02 EDA.ipynb  03 EDA.ipynb  03 Features.ipynb  04 Model.ipynb  04 Pipeline.ipynb  05Pipeline.ipynb
output/: spotify_music_eda_report.html
src/recommender_pipeline/: artist_feature_builder.py  data_loader.py  interaction_matrix_builder.py  matrix_builder.py  pipeline.py  preprocessing_pipeline.py
src/recommender_pipeline/api/: main.py
src/recommender_pipeline/api/routers/: recommendation.py
src/recommender_pipeline/api/schemas/: __init__.py  rating_storage.py  recommendation.py
src/recommender_pipeline/artist_match/: artist_match.py  generate_matching_files.py  id_mapper.py  utils.py
src/recommender_pipeline/data_loaders/: artist_match.py  data_loader.py
src/recommender_pipeline/exploration/: __init__.py  eda.py  html_generator.py
src/recommender_pipeline/feature_generators/: __init__.py  aggregated_audio_features.py  cleanup.py  feature_interactions_engineer.py  flag_noscore.py  group_feature_generator_base.py  missing_value_flag_engineer.py  numerical_aggregator.py  row_counter.py  social_features.py  tag_features.py  top_k_values_combiner.py  top_value_extractor.py  unique_counter.py  user_level_audio_features.py  user_temporal_features.py
src/recommender_pipeline/inference/: recommendation_service.py
src/recommender_pipeline/interfaces/: base_feature_generator.py  base_interaction_matrix_builder.py  base_loader.py  base_matrix_builder.py  base_metric.py  base_pipeline.py  base_preprocessor.py  base_recommender.py  base_tuner.py
src/recommender_pipeline/matrix_builder/: interaction_matrix_builder.py
src/recommender_pipeline/metrics/: lightfm_auc.py  lightfm_warp_loss.py  map_at_k.py  ndcg_at_k.py  precision_at_k.py  recall_at_k.py
src/recommender_pipeline/models/: cross_validation.py  lightfm_recommender.py  lightfmbaseline_model.py  simple_collaborative_filtering.py
src/recommender_pipeline/pipelines/: artists_pipeline.py  general_preprocessing_pipeline.py
src/recommender_pipeline/preprocessors/: feature_scaler.py  social_graph_preprocessor.py  spotify_missing_filler.py  tag_cleaner.py  time_preprocessor.py  userwise_minmax_scaler.py
src/recommender_pipeline/tuner/: optuna_tuner.py
test/: conftest.py  test_artist_level_selection.py  test_artist_listener_counter.py  test_artist_pipeline_integration.py  test_eda.py  test_genre_and_binary_features.py  test_lightfm_matrix_and_feature_builders.py  test_logminmax_scaler.py  test_null_and_popularity.py  test_numeric_aggregator.py  test_tag_aggregator.py  test_userwise_minmax_scaler.py
(+12 files in other folders)
