[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "duckdb>=1.4.1",
    "lightfm",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "rapidfuzz>=3.14.3",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]

[tool.uv.sources]
lightfm = { git = "https://github.com/lyst/lightfm" }
