[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musician-recommender"
version = "0.1.0"
description = "A music recommendation system using collaborative filtering and audio features"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "duckdb>=1.4.1",
    "lightfm",
    "matplotlib>=3.10.7",
    "numpy>=1.24.0",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "plotly>=5.0.0",
    "pyarrow>=22.0.0",
    "rapidfuzz>=3.14.3",
    "seaborn>=0.12.0",
    "unidecode>=1.4.0",
    "ipykernel>=7.1.0",
    "umap-learn>=0.5.9.post2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"



[tool.uv.sources]
lightfm = { git = "https://github.com/lyst/lightfm" }

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
